# canvas

./: .gitignore  mix.exs
assets/: build.js  package-lock.json  package.json
assets/css/: phoenix.css
assets/js/: app.js  editor.js
assets/js/fabric/: editor.js  events.js  index.js
assets/wasm/: Cargo.toml
assets/wasm/src/: alignments.rs  canvas.rs  events.rs  iter_ext.rs  layers.rs  lib.rs  macros.rs  objects.rs  renderer.rs  state.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: canvas_web.ex
lib/canvas/: mailer.ex
lib/canvas_web/: endpoint.ex  gettext.ex  router.ex
lib/canvas_web/live/: canvas_live.ex  canvas_live.html.heex
lib/canvas_web/templates/layout/: root.html.heex
lib/canvas_web/views/: error_helpers.ex
test/support/: conn_case.ex  data_case.ex
